Update primary color to a more vibrant gold shade

--- a/app/themes/astral.css
+++ b/app/themes/astral.css
@@ -9,7 +9,7 @@
     --kerykeion-color-base-content: #333c4d;
     /* --kerykeion-color-primary: #65cc8a; */
     /* --kerykeion-color-primary: #ffbe00; */
-    --kerykeion-color-primary: #ffea00;
+    --kerykeion-color-primary: #FFD700;
     --kerykeion-color-secondary: #367bfb;
     --kerykeion-color-accent: #f68067;
     --kerykeion-color-neutral: #333c4d;
